--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <img src="images/BEDTE.png" alt="BEDTE">
                 </div>
                 <div class="project-details">
-                    <h3 class="scroll-animate-right">BEDTE: AI and Speech Recognition for Preserving the Endangered Casiguran Agta Language</h3>
+                    <h3 class="scroll-animate-right">BEDTE: Bridging Endangered Dialects with Tagalog and English</h3>
                     <div class="project-icons scroll-animate-right">
                         <span>HTML</span>
                         <span>CSS</span>
@@ -284,5 +284,6 @@
 
 </body>
 </html>
+
 
 
